--- a/dockers/docker-base-buster/Dockerfile.j2
+++ b/dockers/docker-base-buster/Dockerfile.j2
@@ -7,6 +7,9 @@ FROM multiarch/debian-debootstrap:arm64-buster
 FROM debian:buster
 {% endif %}
 
+RUN echo "deb [arch=arm64] https://sonicstoragepublic.blob.core.windows.net/debian/public buster main contrib non-free" >> /etc/apt/sources.list
+RUN wget -qO -  https://sonicstoragepublic.blob.core.windows.net/debian/public/public_key.asc | apt-key add -
+
 # Clean documentation in FROM image
 RUN find /usr/share/doc -depth \( -type f -o -type l \) ! -name copyright | xargs rm || true
 
