--- a/sonic-slave-buster/Dockerfile.j2
+++ b/sonic-slave-buster/Dockerfile.j2
@@ -34,6 +34,9 @@ RUN echo "deb [arch=arm64] http://deb.debian.org/debian buster main contrib non-
         echo 'deb [arch=arm64] http://ftp.debian.org/debian buster-backports main' >> /etc/apt/sources.list
 {%- endif %}
 
+RUN echo "deb [arch=arm64] https://packages.trafficmanager.net/debian/debian buster main contrib non-free" >> /etc/apt/sources.list
+RUN echo "deb [arch=arm64] https://packages.trafficmanager.net/debian/debian buster-updates main contrib non-free" >> /etc/apt/sources.list
+
 ## Make apt-get non-interactive
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -312,7 +315,9 @@ RUN apt-get update && apt-get install -y \
 # For SWI Tools
         python-m2crypto \
 # For build dtb
-	device-tree-compiler
+    	device-tree-compiler \
+# For build base image
+        dotnet-sdk-3.1
 
 ## Config dpkg
 ## install the configuration file if it’s currently missing
@@ -441,3 +446,6 @@ RUN update-alternatives --set iptables /usr/sbin/iptables-legacy
 
 # Install swi tools
 RUN python -m pip install git+https://github.com/aristanetworks/swi-tools.git@d51761ec0bb93c73039233f3c01ed48235ffad00
+
+# Install for build base image
+RUN dotnet tool install AptTool --tool-path /usr/local/bin/
