--- a/dockers/docker-base/Dockerfile.j2
+++ b/dockers/docker-base/Dockerfile.j2
@@ -1,6 +1,6 @@
-{% if CONFIGURED_ARCH == "armhf" and MULTIARCH_QEMU_ENVIRON == "y" %}
+{% if CONFIGURED_ARCH == "armhf" %}
 FROM multiarch/debian-debootstrap:armhf-jessie
-{% elif CONFIGURED_ARCH == "arm64" and MULTIARCH_QEMU_ENVIRON == "y" %}
+{% elif CONFIGURED_ARCH == "arm64" %}
 FROM multiarch/debian-debootstrap:arm64-jessie
 {% else %}
 FROM debian:jessie
